# ytdownloader

./: .env  .env.template  .gitignore  Dockerfile  Dockerfile.celery  Dockerfile.web  Gemfile  Pipfile  README.md  docker-compose.dev.yml  docker-compose.yml  dump.rdb  main.py  package-lock.json  package.json  tasks.py  tsconfig.json  webpack.config.js
omnibus/: .kitchen.yml  Berksfile  Gemfile  README.md  omnibus.rb
omnibus/config/projects/: ytdownloader.rb
omnibus/config/software/: chef-gem.rb  pipenv.rb  python3.rb  ytdownloader-ctl.rb  ytdownloader-zlib.rb  ytdownloader_app.rb  zlib.rb
omnibus/config/templates/ytdownloader-ctl/: ytdownloader-ctl.erb
omnibus/cookbooks/ytdownloader/redis/: metadata.rb
omnibus/cookbooks/ytdownloader/redis/attributes/: attributes.rb
omnibus/cookbooks/ytdownloader/redis/recipes/: enable.rb
omnibus/cookbooks/ytdownloader/redis/templates/default/: sv-redis-log-run.erb  sv-redis-run.erb
omnibus/cookbooks/ytdownloader/runit/attributes/: default.rb
omnibus/package-scripts/ytdownloader/: postinst  postrm  preinst  prerm
react_src/: download_form.js
static/js/: download_form.js
templates/: index.html
ytdownloader/: Pipfile  main.py  pyproject.toml  start.sh  tasks.py
ytdownloader/react_src/: DownloadForm.tsx  DownloadStatusBox.tsx  StatusLine.tsx  app.js  download_form.js  download_form.jsx  download_form.tsx
ytdownloader/static/css/: custom.css
ytdownloader/static/js/: app.min.js  app.min.js.map  download_form.js  vendors.min.js  vendors.min.js.map
ytdownloader/templates/: index.html
