[tool.poetry]
name = "ytdownloader"
version = "0.1.0"
description = ""
authors = ["Steven Su <lakewood999@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.3.6"}
redis = "^5.0.3"
requests = "^2.32.3"

[tool.poetry.group.web.dependencies]
flask = "^3.0.3"
gunicorn = "^21.2.0"



[tool.poetry.group.celery.dependencies]
yt-dlp = "^2024.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
